regression MIS Split kernel OpenCL #49630

Closed
opened 2016-10-11 17:19:48 +02:00 by mathieu menuet · 8 comments

System Information
Linux, RX480 with AMDGPU-PRO 16.3

Blender Version
Broken: 3e460b6
Worked: 2.78

Short description of error
Activating MIS when using an HDR as environment map prevent rendering and gives an error: OpenCL error: CL_INVALID_ARG_SIZE in clSetKernelArg(kernel, (narg)++, sizeof(ptr), (void)&ptr)
bug hdri master.blend
Exact steps for others to reproduce the error
Open attached file and hit F12 (with OpenCL enabled). HDR is from HDRHaven and is CC-BY.
It works in 2.78, not in latest master.

**System Information** Linux, RX480 with AMDGPU-PRO 16.3 **Blender Version** Broken: 3e460b6 Worked: 2.78 **Short description of error** Activating MIS when using an HDR as environment map prevent rendering and gives an error: OpenCL error: CL_INVALID_ARG_SIZE in clSetKernelArg(kernel, (*narg)++, sizeof(ptr), (void*)&ptr) [bug hdri master.blend](https://archive.blender.org/developer/F377007/bug_hdri_master.blend) **Exact steps for others to reproduce the error** Open attached file and hit F12 (with OpenCL enabled). HDR is from HDRHaven and is CC-BY. It works in 2.78, not in latest master.
Sergey Sharybin was assigned by mathieu menuet 2016-10-11 17:19:48 +02:00
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Author

Added subscribers: @LukasStockner, @ThomasDinges

Added subscribers: @LukasStockner, @ThomasDinges
Sergey Sharybin removed their assignment 2016-10-11 17:42:43 +02:00
Lukas Stockner was assigned by Sergey Sharybin 2016-10-11 17:42:43 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

It is caused by 9ea71bc.

It is caused by 9ea71bc.

This issue was referenced by blender/cycles@98cab8613e

This issue was referenced by blender/cycles@98cab8613edb478a3fbc9234cb6e13424ccedbc7

This issue was referenced by cd843409d3

This issue was referenced by cd843409d3b702d319d841a07849ea8824414083
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49630
No description provided.